[FIX] website_sale: backport of design fixes
Solve multiple issues on the products grid, causing:
- the ribbon to be wrongly positioned
- the layout to be broken on Firefox
- the products' images ratio to be incorrect on Safari

task #2710553

X-original-commitf: b0bf660c7742af252b1f1faf3d0d4c8ce791b435

--- a/addons/website_sale/static/src/scss/website_sale.scss
+++ b/addons/website_sale/static/src/scss/website_sale.scss
@@ -299,7 +299,6 @@ $o-wsale-products-layout-grid-gutter-width: min($grid-gutter-width / 2, $o-wsale
 
     @include media-breakpoint-up(lg) {
         td.oe_product {
-            height: 1px; // Will adapt to its content
             padding-bottom: $o-wsale-products-layout-grid-gutter-width * .5;
 
             .o_wsale_product_btn {
